--- a/mern/src/components/Characters/Character.css
+++ b/mern/src/components/Characters/Character.css
@@ -1,3 +1,11 @@
 .accordion {
   background-color: #dddedf5b !important;
 }
+
+.characterContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-top: 50px;
+}
