changed "mern" folder to "project"

--- a/project/src/components/Home/Home.css
+++ b/project/src/components/Home/Home.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 .homeContainer {
-  background-image: url("siyan-ren-5cwPfMLqYs0-unsplash.jpg");
+  background-image: url("mern\ background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
